--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   auto_size_text: ^2.1.0
   font_awesome_flutter: ^8.8.1
   timeago: ^2.0.26
+# flutter_local_notifications: ^1.4.4+4
  
 
 
